<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_space_default_size"
        android:text="煤矿井下钻孔轨迹测量"
        android:textColor="@color/title_color"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="控制及显示评价软件"
        android:textColor="@color/title_color"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:visibility="gone"
        android:textColor="@color/title_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name3"
        android:textColor="@color/title_color"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.02" >

            <Button
                android:id="@+id/btn_track_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/轨迹测量"
                android:textSize="@dimen/main_btn_default_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.02" >

            <Button
                android:id="@+id/btn_data_receive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/接收评价"
                android:textSize="@dimen/main_btn_default_size" />
        </LinearLayout>

 <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             >

            <Button
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/main_padding_default_size"
                android:text="@string/探管设置"
                android:textSize="@dimen/main_btn_default_size"
                android:visibility="gone" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.02" >

            <Button
                android:id="@+id/btn_leaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/探管适配"
                android:textSize="@dimen/main_btn_default_size" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.02" >

            <Button
                android:id="@+id/btn_dataquery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/数据查询"
                android:textSize="@dimen/main_btn_default_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.02" >

            <Button
                android:id="@+id/btn_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/软件帮助"
                android:textSize="@dimen/main_btn_default_size"
                tools:ignore="SpUsage"/>
        </LinearLayout><LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.02" >

        <Button
            android:id="@+id/btn_当地参数"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/地质参数"
            android:textSize="@dimen/main_btn_default_size"
            tools:ignore="SpUsage"/>
    </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.02" >

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/软件退出"
                android:textSize="@dimen/main_btn_default_size"
                tools:ignore="SpUsage"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>